hard-gists/899524/run.log
=== Docker Run Log for 899524 ===
Started at: Mi 29. Okt 18:06:52 CET 2025

[2025-10-29 18:06:53] START: Running container for 899524
[2025-10-29 18:06:53] SUCCESS: Container a381e6037df0b1515d615d015993a9f2a1909a934493e172b564d43a8bd93c44 started for 899524
=== Container logs for 899524 ===
  File "/snippet.py", line 25
    print 'Starting %s...' % mod.__name__
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 899524 ===
[2025-10-29 18:06:55] INFO: Container a381e6037df0b1515d615d015993a9f2a1909a934493e172b564d43a8bd93c44 has stopped
